solve img problem

--- a/lab-css-recipes-clone-master/apple-pie/index.html
+++ b/lab-css-recipes-clone-master/apple-pie/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Apple Pie Recipe</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    <img src="lab-css-recipes-clone-master\apple-pie\images\apple-pie.jpg" alt="Apple pie">
+    <img src="./images/apple-pie.jpg" alt="Apple pie">
     <h1> Apple Pies</h1>
      <p>This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
     be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
     favorites as well! </p>
-    <img src="lab-css-recipes-clone-master\french-soup\images\recipe-info.png" alt="recipe info">
+    <img src="./images/recipe-info.png" alt="recipe info">
     <hr/>
     <h2>Ingredients</h2>
     <p> <ul>
@@ -26,7 +27,7 @@
       <li>1/2 cup packed brown sugar </li>
       <li>8 Granny Smith apples - peeled, cored and sliced </ul>
     </p>
-    <img src="lab-css-recipes-clone-master\apple-pie\images\cooking-info.png" alt="cooking info">
+    <img src="./images/cooking-info.png" alt="cooking info">
     <hr/>
 
     <h2>Directions</h2>
