--- a/lab-css-recipes-clone-master/apple-pie/index.html
+++ b/lab-css-recipes-clone-master/apple-pie/index.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Apple Pie Recipe</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    <img src="./images/apple-pie.jpg" alt="Apple pie">
-    <h1> Apple Pies</h1>
+    <header>
+      <!-- <div class="prueba"></div> -->
+      
+      <img id="img-div" src="./images/apple-pie.jpg" alt="Apple pie">
+      <h1>Apple Pies</h1>
+    <!-- <div id="img-1"></div> -->
+  </header>
+ 
      <p>This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
     be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
     favorites as well! </p>
-    <img src="./images/recipe-info.png" alt="recipe info">
+    <img class="img-format" src="./images/recipe-info.png" alt="recipe info">
     <hr/>
     <h2>Ingredients</h2>
     <p> <ul>
@@ -27,7 +33,8 @@
       <li>1/2 cup packed brown sugar </li>
       <li>8 Granny Smith apples - peeled, cored and sliced </ul>
     </p>
-    <img src="./images/cooking-info.png" alt="cooking info">
+    <img class="img-format-1" 
+     src="./images/cooking-info.png" alt="cooking info">
     <hr/>
 
     <h2>Directions</h2>
@@ -42,5 +49,6 @@
       <li>Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
       degrees C). Continue baking for 35 to 45 minutes, until apples are soft.</li>
     </ol>
+  </div>
   </body>
 </html>
