--- a/lab-css-recipes-clone-master/apple-pie/index.html
+++ b/lab-css-recipes-clone-master/apple-pie/index.html
@@ -16,7 +16,7 @@
     <!-- <div id="img-1"></div> -->
   </header>
  
-     <p>This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
+     <p id="introduction">This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
     be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
     favorites as well! </p>
     <img class="img-format" src="./images/recipe-info.png" alt="recipe info">
