--- a/lab-css-recipes-clone-master/apple-pie/index.html
+++ b/lab-css-recipes-clone-master/apple-pie/index.html
@@ -12,7 +12,7 @@
       <!-- <div class="prueba"></div> -->
       
       <img id="img-div" src="./images/apple-pie.jpg" alt="Apple pie">
-      <h1>Apple Pies</h1>
+      <h1>Apple Pie</h1>
     <!-- <div id="img-1"></div> -->
   </header>
  
