second recipe done + button added

--- a/lab-css-recipes-clone-master/apple-pie/index.html
+++ b/lab-css-recipes-clone-master/apple-pie/index.html
@@ -50,5 +50,7 @@
       degrees C). Continue baking for 35 to 45 minutes, until apples are soft.</li>
     </ol>
   </div>
+  <a href="../french-soup/index.html"><button>Next recipe</button></a>
+ 
   </body>
 </html>
